aded url redirecting

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,13 @@
         <input type="text" name="url" value="https://freecodecamp.org" />
         <button type="submit">Post Url</button>
       </form>
+
+      <h3>
+        Click the link below after entering a valid url
+      </h3>
+      <a href="https://playful-velociraptor.glitch.me/api/shorturl/"
+        >Url Shortner</a
+      >
     </section>
   </body>
 </html>
